TEST_PROGRAMS/VALID/08/topLevelDecs.go
package main;
var x int;
var y = 10;
var z int = 5;
type number int;
var aSlice []int;
var anArray [3]number;
var (
    a int
    b int
    c, d int = 5,6
);
type(
    int1 int
    int2 int
)
func main(){

}
func f1(a,b int, c float64){

}
func f2(a int, b int, c int){

}
