TEST_PROGRAMS/INVALID/03/invalid_vardecl_6.go
package main
func f(){
	var x = 10;
	type person struct{
		first, last string
		age, height int
	}
	var z []person;
	var w [20]person;
	_ := 5 // invalid

	return "Damn Daniel..."
}

